[fix] Home: logo not visible - fix #517

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -729,7 +729,7 @@ $screen-menu:                     845px;
 @media screen and (min-width: $screen-md) {
   #home .logo {
     height: 200px;
-    background-image: url('../../resources/logo/svg/colors/logo.large.cesium.dune.svg');
+    background-image: url('../img/logo_200px.png');
     background-size: 200px 200px;
   }
 
